# car_service

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
dbt_models/: README.md  dbt_project.yml  packages.yml
dbt_models/models/curated_car/: car_service.md  customer_subscription_access.sql  revenue_by_customer.sql  src_car_service.yml  vw_revenue_by_type.sql  vw_subscription_events.sql
kafka_libs/: client.properties  confluent_cloud.ini  kafka_producer.py  sample_consumer.py
notebooks/: car_data_exploratory_data_analysis.ipynb
spark_jobs/: data_config.py  spark_libs.py  spark_session.py  stream_subscription_events.py
spark_jobs/schemas/: raw_events.py
