[tool.poetry]
name = "car_service"
version = "0.1.0"
description = "Car services data pipelines and analytics"
authors = ["Car services Engineering Team <engineers@car_service.com>"]

[tool.poetry.dependencies]
python = "^3.10.1, <3.11"
types-requests = "^2.28.11.16"
types-python-dateutil = "^2.8.19.6"
google-cloud-bigquery = "^3.10.0"
pandas = "^2.0.1"
pyspark = "^3.4.0"
pyarrow = "^12.0.0"
openpyxl = "^3.1.2"
dbt-bigquery = "^1.5.0"
confluent-kafka = "^2.1.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
pydocstyle = "^6.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.3.1"
nbqa = "^1.7.0"
jupyterlab = "^3.6.3"
jupyterthemes = "^0.20.0"
sqlfluff = "^2.1.0"
shandy-sqlfmt= {extras = ["jinjafmt"], version = "^0.18.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pydocstyle]
ignore = ["D104", "D107", "D212", "D203"]

[tool.sqlfmt]
line_length = 120
exclude=["target/**/*", "dbt_packages/**/*", "notebooks/**/*", "macros/**/*"]

[tool.sqlfluff]
sql_file_exts = [".sql", ".sql.j2", ".dml", ".ddl"]

[tool.sqlfluff.core]
templater = "dbt"
dialect = "bigquery"
exclude_rules = "L036"

[tool.sqlfluff.rules]
max_line_length = 120
capitalisation_policy = "lower"
extended_capitalisation_policy = "lower"
